style/components/checkbox.css
.m-checkbox {
    position: relative;
    margin: 0;
    cursor: pointer;
    height: 16px;
    width: 16px;;
}

.m-checkbox::before {
    content: "";
    position: absolute;
    top: -2px;
    left: -2px;
    height: 20px;
    width: 20px;
    background-image: url("../../assets/Icons/ic_Checkbox_Inactive.png");
    background-position: center;
    background-repeat: no-repeat;
}

.m-checkbox:checked::after {
    content: "";
    position: absolute;
    top: -2px;
    left: -2px;
    width: 20px;
    height: 20px;
    background-image: url("../../assets/Icons/ic_Checkbox_Active.png");
    background-position: center;
    background-repeat: no-repeat;
}

